[package]
name = "yatui"
version = "0.1.0"
authors = ["Ilya Filtsin <ilfiltsin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
thiserror = "1.0.24"
once_cell = "1.7.2"
bitflags = "1.3.2"
derive_more = "0.99.17"
crossbeam-channel = "0.5.1"
cassowary = "0.3.0"
trait-set = "0.3.0"
smallvec = { version = "1.9.0", features = ["union"] }
log = "0.4"
unicode-segmentation = "1.9.0"

[dev-dependencies]
serial_test = "0.5.1"
pretty_assertions = "1.1.0"
