[package]
name = "yatui"
version = "0.1.0"
authors = ["Ilya Filtsin <ilfiltsin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
thiserror = "1.0.39"
once_cell = "1.17.1"
bitflags = "1.3.2"
derive_more = "0.99.17"
crossbeam-channel = "0.5.7"
cassowary = "0.3.0"
trait-set = "0.3.0"
log = "0.4"
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "time"] }
unicode-segmentation = "1.10.1"
unicode-width = "0.1"
taffy = "0.3.6"
# TODO: Move to dev
compact_str = "0.7.0"

[dev-dependencies]
serial_test = "1.0.0"
pretty_assertions = "1.3.0"
