[package]
name = "yatui-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10"
unicode-width = "0.1"
bitflags = "2.4"
btree-range-map = "0.7"

[dev-dependencies]
rstest = "0.19"
pretty_assertions = "1.4"
