[package]
name = "yatui"
version = "0.1.0"
authors = ["Ilya Filtsin <ilfiltsin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yatui-macros = { version = "0.1.0", path = "../yatui-macros" }
tokio = { version = "1.13", features = ["rt", "time", "sync"] }
termion = "1.5.6"
thiserror = "1.0.24"
once_cell = "1.7.2"
crossbeam = "0.8.0"
bitflags = "1.3.2"
